# Kanpaku_dev

./: .coverage  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  setup_env.ps1  spec_jp.md
codd/: codd.yaml
connect_llm/: README.md  __init__.py  debug_logger.py  env_loader.py  gemini_wrapper.py  ollama_wrapper.py  requirements.txt  yaml_filter.py
connect_llm/debug/: debug.yaml
docs/design/: security_sandbox.md  system_design.md
docs/detailed_design/: agent_state_transitions.md  history_persistence_schema.md  redis_schema_and_streams.md  routing_bloom_taxonomy.md  skill_evolution_system.md  task_lifecycle_flow.md
docs/governance/: adr_architecture.md
docs/infra/: resource_allocation.md
docs/operations/: monitoring_and_dashboard.md
docs/plan/: MVP_plan.md  implementation_plan.md
docs/requirements/: requirements.md
docs/spec/: spec.md
docs/test/: acceptance_criteria.md
src/: __init__.py  main.py
src/agents/: base_agent.py  kanpaku.py  llm_client.py  toneri.py  tonoben.py
src/config/: settings.py
src/db/: redis_client.py  state_manager.py  yaml_store.py
src/executor/: safe_io.py
src/infrastructure/: __init__.py  llm_server_manager.py
src/models/: agents.py  events.py  lock.py  message.py  state.py  tasks.py
src/utility/: messages.py  prompts.py
tests/: test_main.py
tests/sprint1/: README.md  __init__.py  conftest.py  test_integration.py  test_models.py  test_result.txt  test_safe_io.py
tests/sprint2/: README.md  conftest.py  image.md  test_agent_loop.py  test_communication.py  test_result.txt  test_state_validation.py  test_tonoben_decompose.py
tests/sprint2_1/: README.md  conftest.py  test_event_loop_integration.py  test_result.txt
tests/sprint3/: README.md  conftest.py  image.md  (+6 more)
(+21 files in other folders)
